* Disable user the create tasks using a past hour * Displaying duration of tasks >4hrs properly * Fixed alignment issues

--- a/src/styles/views/MyTasks.scss
+++ b/src/styles/views/MyTasks.scss
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    max-width: 70em;
+    max-width: 100%;
     height: 22em;
     font-size: 16px;
     font-weight: 300;
